# imox_iot

./: .gitignore  README.md  SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  SquareLine_Project_events.py  Themes.slt  patch_lv_conf.py  plan_provisionamiento_dinamico.md  platformio.ini  project.info  run_sim.sh
assets/: ui_font_LecturaS.c  ui_font_LecturaS.fcfg  ui_font_LecturaS48.c  ui_font_LecturaS48.fcfg  ui_font_Micro_text.c  ui_font_Micro_text.fcfg  ui_font_Qualy114.c  ui_font_Qualy114.fcfg  ui_font_Qualy12.c  ui_font_Qualy12.fcfg  ui_font_Qualy14.c  ui_font_Qualy14.fcfg  ui_font_Qualy150.c  ui_font_Qualy150.fcfg  ui_font_Qualy180.c  ui_font_Qualy180.fcfg  ui_font_Qualy200.c  (+24 more)
simulador/: CMakeLists.txt  lv_conf.h  main.c
src/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_globals.h  ui_helpers.c  ui_helpers.h  ui_img_yex_240h_png.c  ui_overlay.c  ui_overlay.h  ui_splash.c  ui_splash.cpp  ui_splash.h  ui_swipe_hint.c  ui_swipe_hint.h  ui_theme_manager.c  ui_themes.c  ui_themes.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_navdots.c  ui_comp_navdots.h  ui_comp_navpanel.c  ui_comp_navpanel.h
src/ui/fonts/: ui_font_LecturaS48.c  ui_font_Micro_text.c  ui_font_Qualy114.c  ui_font_Qualy12.c  ui_font_Qualy14.c  ui_font_Qualy150.c  ui_font_Qualy180.c  ui_font_Qualy200.c  ui_font_Qualy24.c  ui_font_Qualy28.c  ui_font_Qualy48.c  ui_font_Qualy72.c  ui_font_Qualy82.c  ui_font_Qualy90.c  ui_font_Qualy96.c  ui_font_Secondary_info.c  ui_font_Unidades.c  ui_font_Valores.c  ui_font_diagElem.c  ui_font_symbols_14.c  ui_font_symbols_24.c
src/ui/screens/: ui_Modo_Diario_24hrs.c  ui_Modo_Diario_24hrs.h  ui_burnout.c  ui_burnout.h  ui_config.c  ui_config.h  ui_config_brightness.c  ui_config_brightness.h  ui_corriente.c  ui_corriente.h  ui_dashboard.c  ui_dashboard.h  ui_diagnostic.c  ui_diagnostic.h  ui_statsWatts.c  ui_statsWatts.h  ui_voltageStats.c  ui_voltageStats.h  ui_voltaje.c  ui_voltaje.h
(+19 files in other folders)
